[package]
name = "kubectl-tunnel"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.58", features = ["derive"] }
either = "1.15.0"
k8s-openapi = { version = "0.27.0", features = ["latest"] }
kube = { version = "3.0.1", features = ["runtime", "ws"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.49.0", features = ["full"] }
tokio-io = "0.1.13"
tokio-util = { version = "0.7.18", features = ["full"] }
tun = { version = "0.8.5", features = ["async"] }
