[package]
name = "kubectl-tunnel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
test = false
bench = false

[dependencies]
bytes = { version = "1.11.1" }

clap = { version = "4.5.58", features = ["derive"] }
either = "1.15.0"
futures = "0.3.32"
k8s-openapi = { version = "0.27.0", features = ["latest"] }
kube = { version = "3.0.1", features = ["runtime", "ws"] }
packet = "0.1.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.49.0", features = ["full"] }
tokio-codec = "0.1.2"
tokio-io = "0.1.13"
tokio-util = { version = "0.7.18", features = ["full"] }
tun = { version = "0.8.5", features = ["async"] }
ratatui = "0.29.0"
crossterm = "0.29.0"
